--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-component-library-template",
+  "name": "@tapcart/dynamic-consumer-components",
   "private": false,
   "version": "2.0.5",
   "packageManager": "pnpm@8.4.0",
